# rust-axum-htmx-example

./: .env  .gitignore  Cargo.toml  README.md  create_db.sh  create_test_db.sh  database.db  dump.sqlite.sql  test.dump.sqlite.sql
.github/workflows/: rust.yml
frontend/: index.html  pnpm-lock.yaml  signin.html  signup.html  vite.config.js
frontend/src/: main.ts  style.css
src/: errors.rs  main.rs  user.rs
src/handler/: mod.rs  nav.rs  query_cats.rs  query_cats_form.rs  signin.rs  signup.rs
src/handler/auth/: mod.rs  sign_in.rs  sign_out.rs  sign_up.rs
src/handler/cats/: delete.rs  get.rs  post.rs
src/handler/nav/: mod.rs
src/handlers/: mod.rs  nav.rs  query_cats.rs  query_cats_form.rs  signin.rs  signout.rs  signup.rs
src/model/: Cat.rs  cat.rs  mod.rs  owner.rs
src/test/: e2e_add_cat.rs  e2e_has_add_cat_form.rs  e2e_sign_in.rs  e2e_sign_out.rs  e2e_sign_up.rs  mod.rs
src/utils/: generate_table.rs  get_secret.rs  minify.rs  mod.rs  validate_token.rs
templates/: cat_add_form.stpl  cat_table.stpl
templates/auth/: sign_in.stpl  sign_in_error.stpl
templates/nav/: nav.stpl
