[package]
name = "rust-axum-htmx-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = "0.7.2"
libsql = "0.1.11"
serde = "1.0.193"
tokio = { version = "1.35.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
