[package]
name = "rust-axum-htmx-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
axum = "0.7.2"
dotenv = "0.15.0"
fantoccini = "0.19.3"
jsonwebtoken = "9.2.0"
libsql = { git = "https://github.com/tursodatabase/libsql.git" }
rand = "0.8.5"
sailfish = "0.8.3"
serde = "1.0.193"
tokio = { version = "1.35.0", features = ["full"] }
tower-http = { version = "0.5.0", features = [
    "cors",
    "compression-br",
    "compression-gzip",
] }
url = "2.5.0"
